--- a/index.html
+++ b/index.html
@@ -105,7 +105,58 @@
                         <span class="stock__price-money">1550р</span>
                     </div>
                 </div>
-                <button class="stock__button">Заказать со скидкой</button>
+                <button class="btn stock__button">Заказать со скидкой</button>
+            </div>
+        </section>
+
+        <section class="old">
+            <div class="container">
+                <h2 class="old__title">ОБЫЧНЫЕ СЕКАТОРЫ УСТАРЕЛИ!</h2>
+                <img src="images/old-pruner.png" alt="old pruner"
+                    class="old__image">
+                <ul class="old__limitations">
+                    <li class="old__limitation">
+                        <img src="images/limitaion1.png" alt="hands"
+                            class="old__limitaion-image">
+                        <p class="old__limitaion-description">Постоянные мозоли
+                            на руках и боли в кисти. От нагрузок начинает болеть
+                            блуждающий нерв в районе большого пальца</p>
+                    </li>
+                    <li class="old__limitation">
+                        <img src="images/limitaion2.png" alt="spring"
+                            class="old__limitaion-image">
+                        <p class="old__limitaion-description">Механизм с
+                            пружиной быстро приходит в негодность. Срок службы
+                            стандартных секаторов от 6 до 12 месяцев</p>
+                    </li>
+                    <li class="old__limitation">
+                        <img src="images/limitaion3.png" alt="pruner"
+                            class="old__limitaion-image">
+                        <p class="old__limitaion-description">Обычный секатор
+                            часто жует то, что вы пытаетесь им перекусить </p>
+                    </li>
+                    <li class="old__limitation">
+                        <img src="images/limitaion4.png" alt="pruner"
+                            class="old__limitaion-image">
+                        <p class="old__limitaion-description">Не рассчитан на
+                            побеги разного диаметра. Допустимая разница в
+                            диаметре 4-7 мм</p>
+                    </li>
+                </ul>
+                <div class="best-decision">
+                    <p class="best-decision__big-text">НАЙДЕНО <br>
+                        &nbsp;ЛУЧШЕЕ РЕШЕНИЕ
+                    </p>
+                    <p class="best-decision__text">&emsp;ДЛЯ РАБОТЫ С ВАШИМ
+                        САДОМ</p>
+                </div>
+                <div class="choice">
+                    <img src="images/choice.jpg" alt="pruner"
+                        class="choice__img">
+                    <span class="gif">Gif</span>
+                    <p class="choice__text">Easy Garden - <span>выбор зарубежных
+                            фермеров!</span></p>
+                </div>
             </div>
         </section>
 
