--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
         <div class="container">
             <ul class="header__advantages">
                 <li class="header__advantage">
-                    <img class="header__advantage-icon"
+                    <img class="header__advantage-icon icon-battery"
                         src="images/header-advantage1.png" alt="battery">
                     <div class="header__advantage-text"><span>Работает 8
                             часов</span><br>
                         на одном заряде</div>
                 </li>
                 <li class="header__advantage">
-                    <img class="header__advantage-icon"
+                    <img class="header__advantage-icon icon-guarantee"
                         src="images/header-advantage2.png" alt="guarantee">
                     <div class="header__advantage-text"><span>Гарантия</span>
                         <br>
                         на товар 3 года</div>
                 </li>
             </ul>
-            <div class="logo">
+            <div class="header__logo">
                 <img src="images/logo.png" alt="logo" class="logo__icon">
             </div>
         </div>
@@ -72,7 +72,7 @@
         <section class="stock">
             <div class="container">
                 <div class="stock__quantity">
-                    <div class="stock__quantity-numeral"><span>14</span> шт.
+                    <div class="stock__quantity-numeral"><span>14 </span> шт.
                     </div>
                     <span class="stock__quentity-text">осталось по акции!
                     </span>
