--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/main.js" defer></script>
 </head>
 
 <body>
@@ -28,9 +29,9 @@
                         на товар 3 года</div>
                 </li>
             </ul>
-            <div class="header__logo">
+            <a class="header__logo" href="#">
                 <img src="images/logo.png" alt="logo" class="logo__icon">
-            </div>
+            </a>
         </div>
     </header>
 
